@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Issue #1147: Exceptions were directly allowing string exceptions in their
+  throw() method even though string exceptions no longer allowed.
+
 - Issue #1096: Prevent a segfault from getting the repr of a very deeply nested
   list by using the recursion counter.
 
